# pyb2b

./: .gitignore  license.md  pyproject.toml  readme.md
scripts/: datamodel.py
src/b2b/: __init__.py  main.py
src/b2b/console/: airac.py
src/pyb2b/: __init__.py  flight.py  flow.py  main.py  mixins.py
src/pyb2b/auth/: pkcs12.py
src/pyb2b/console/: airac.py  style.tcss  tui.py
src/pyb2b/services/: __init__.py
src/pyb2b/services/airspace/structure/: aixm_dataset.py
src/pyb2b/services/flight/management/: __init__.py  flightlist.py  flightlistbyaerodrome.py  flightlistbyairspace.py  flightlistbymeasure.py  flightplanlist.py  flightretrieval.py
src/pyb2b/services/flow/measures/: __init__.py  regulationlist.py
src/pyb2b/types/: common.py
src/pyb2b/types/airspace/structure/: aixm_dataset.py
src/pyb2b/types/flight/management/: flightplanlist.py
src/pyb2b/xml/: FlightListByAerodromeRequest.xml  FlightListByAirspaceRequest.xml  FlightListByMeasureRequest.xml  ForecastFlightPlanRequest.xml
tests/: test_b2b.py
