[tool.poetry]
name = "pyb2b"
version = "0.1.0"
description = "Python API to EUROCONTROL NM B2B services"
authors = ["Xavier Olive <git@xoolive.org>"]
license = "MIT"
readme = "readme.md"
include = [
  "license.md",
  "py.typed",
  ".xml",
]

[tool.poetry.scripts]
b2b_airac = 'b2b.console.airac:main'

[tool.poetry.dependencies]
python = ">=3.8,<4.0"
pandas = "^2.0.3"
requests = "^2.31.0"
requests-pkcs12 = ">=1.10"
pyopenssl = "^23.2.0"
tqdm = "^4.65.0"
rich = "^13.4.2"
appdirs = "^1.4.4"

[tool.poetry.group.dev.dependencies]
poetry = ">=1.5.1"
pre-commit = ">=2.13.0"
black = ">=21.6"
mypy = ">=0.981"
ruff = ">=0.0.247"
requests = { extras = ["socks"], version = ">=2.27" }
pytest = "^7.4.0"
types-requests = "^2.31.0.1"
types-pyopenssl = "^23.2.0.1"
ipykernel = "^6.24.0"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"

[tool.black]
line-length = 80
target_version = ['py38', 'py39', 'py310', 'py311']
include = '\.pyi?$'
exclude = '''
/(
    __pycache__
  | \.git
  | \.mypy_cache
  | \.ipynb_checkpoints
  | build
  | dist
)/
'''

[tool.ruff]
select = [
  "E", "W",  # pycodestyle
  "F",  # pyflakes
  "I",  # isort
  "NPY",  # numpy
  # "PD",  # pandas
  "DTZ", # flake8-datetimez
  "RUF"
]
line-length = 80
target-version = "py38"
exclude = ["src/traffic/data/eurocontrol/b2b/"]  # will be in a different package

[tool.ruff.isort]
known-first-party = ["numpy", "pandas", "pyproj", "shapely"]

[tool.mypy]
python_version = 3.8
platform = "posix"

color_output = true
pretty = true
show_column_numbers = true
strict = true
check_untyped_defs = true
ignore_missing_imports = true
warn_no_return = true
warn_redundant_casts = true
warn_unused_configs = true
warn_unused_ignores = true
