[tool.poetry]
name = "pyb2b"
version = "0.2.0"
description = "Python API to EUROCONTROL NM B2B services"
authors = ["Xavier Olive <git@xoolive.org>"]
license = "MIT"
readme = "readme.md"
include = [ "license.md", "py.typed", "style.tcss" ]

[tool.poetry.scripts]
airac = "pyb2b.console.airac:main"
b2b = "pyb2b.console.tui:main"

[tool.poetry.dependencies]
python = ">=3.10,<4.0"
xmltodict = "^0.13.0"
pandas = ">=2.0.3"
pitot = "^0.3.1"
httpx = "^0.25.2"
cryptography = "^42.0.5"
rich = ">=13.4.2"
textual = "^0.42.0"
tqdm = ">=4.65.0"
appdirs = ">=1.4.4"

[tool.poetry.group.dev.dependencies]
pre-commit = ">=2.13.0"
mypy = ">=0.981"
ruff = ">=0.0.247"
pytest = ">=7.4.0"
ipykernel = ">=6.24.0"
textual-dev = "^1.2.1"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"

[tool.ruff]
select = [
  "E", "W",  # pycodestyle
  "F",  # pyflakes
  "I",  # isort
  "NPY",  # numpy
  # "PD",  # pandas
  "DTZ", # flake8-datetimez
  "RUF"
]
line-length = 80
target-version = "py310"

[tool.ruff.isort]
known-first-party = ["numpy", "pandas", "pyproj", "shapely"]

[tool.mypy]
python_version = "3.10"
platform = "posix"

color_output = true
pretty = true
show_column_numbers = true
strict = true
check_untyped_defs = true
ignore_missing_imports = true
warn_no_return = true
warn_redundant_casts = true
warn_unused_configs = true
warn_unused_ignores = true
