[project]
name = "pyb2b"
version = "0.2.0"
description = "Python API to EUROCONTROL NM B2B services"
authors = [{ name = "Xavier Olive", email = "git@xoolive.org" }]
license = "MIT"
readme = "readme.md"
requires-python = ">=3.10"
dependencies = [
  "appdirs>=1.4.4",
  "cryptography>=43.0.3",
  "httpx>=0.27.2",
  "pandas>=2.2.3",
  "pitot>=0.3.2",
  "rich>=13.9.4",
  "textual>=0.86.3",
  "tqdm>=4.67.0",
  "xmltodict>=0.14.2",
]

[project.scripts]
airac = "pyb2b.console.airac:main"
b2b = "pyb2b.console.tui:main"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[dependency-groups]
dev = [
  "ipykernel>=6.29.5",
  "mypy>=1.13.0",
  "pre-commit>=4.0.1",
  "pytest>=8.3.3",
  "ruff>=0.7.4",
  "textual-dev>=1.7.0",
]

[tool.ruff]
lint.select = [
  "E",
  "W",   # pycodestyle
  "F",   # pyflakes
  "I",   # isort
  "NPY", # numpy
  # "PD",  # pandas
  "DTZ", # flake8-datetimez
  "RUF",
]
line-length = 80
target-version = "py310"

[tool.ruff.lint.isort]
known-first-party = ["numpy", "pandas", "pyproj", "shapely"]

[tool.mypy]
python_version = "3.10"
platform = "posix"

color_output = true
pretty = true
show_column_numbers = true
strict = true
check_untyped_defs = true
ignore_missing_imports = true
warn_no_return = true
warn_redundant_casts = true
warn_unused_configs = true
warn_unused_ignores = true
